# friendlyfl-router

./: .env  Dockerfile  README.md  crontab  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: router-workflow.yml
friendlyfl/: asgi.py  settings.py  urls.py  wsgi.py
friendlyfl/jobs/minutely/: check_site_status.py
friendlyfl/migrations/: 0001_initial.py  0002_alter_site_name.py  0003_alter_run_logs_alter_run_status.py  0004_run_middle_artifacts_run_tasks_alter_project_tasks_and_more.py  0005_run_site_uid_alter_run_status.py  0006_run_cur_seq_alter_run_site_uid_alter_run_status.py
friendlyfl/router/: models.py  serializers.py  views.py
friendlyfl/utils/: display_util.py  file_util.py  run_util.py
